k8sManifests/emptyDirVolume.yml
apiVersion: v1
kind: Pod 
metadata:
  name: vols-demo
spec:
  containers:
  - name: ubunto1
    image: ubuntu 
    command:
      - sleep 
      - "3600"
    volumeMounts:
    - name: vol
      mountPath: /ubunto1
  - name: ubunto2
    image: ubuntu
    command:
      - sleep 
      - "3600"
    volumeMounts:
    - name: vol 
      mountPath: /ubunto2 
  volumes:
  - name: vol
    emptyDir: {}
