k8sManifests/mosquito.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  labels:
    app: mosquitto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
        - name: mosquitto
          image: eclipse-mosquitto:1.6.2
          ports:
            - containerPort: 1883
          volumeMounts:
            - name: mosquitto-conf
              mountPath: /mosquitto/config
            - name: mosquitto-secret
              mountPath: /mosquitto/secret  
              readOnly: true
            - name: mosquitto-hellobaby
              mountPath: /mosquitto/hellobaby 
              readOnly: true
      volumes:
        - name: mosquitto-conf
          configMap:
            name: mosquitto-config-file
        - name: mosquitto-secret
          secret:
            secretName: mosquitto-secret-file  
        - name: mosquitto-hellobaby
          hostPath: 
            path: /home/tayeb/Documents/k8scontrol/hellobaby
        

#---
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: mosquitto
#  labels:
#    app: mosquitto
#spec:
#  replicas: 1
#  selector:
#    matchLabels:
#      app: mosquitto
#  template:
#    metadata:
#      labels:
#        app: mosquitto
#    spec:
#      containers:
#        - name: mosquitto
#          image: eclipse-mosquitto:1.6.2
#          ports:
#            - containerPort: 1883
