k8sManifests/FullApplicationMongo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:4.4
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: /data/db
              name: mongo-volume
      volumes:
        - name: mongo-volume
          persistentVolumeClaim:
            claimName: mongo-pvc-sc
#        - name: emptyDirvol
#           emptyDir: {}
#        - name: hostPath
#           path: /mnt/myhostPath
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  ports: 
  - port: 27017
    protocol: TCP
    name: mongo
    targetPort: 27017
  selector: 
    app: mongodb


---
apiVersion: v1
kind: Service
metadata:
  name: mongo-svc
spec:
  ports:
    - port: 27017
      protocol: TCP
      targetPort: 27017
      nodePort: 32000
  selector:
    app: mongo
  type: NodePort
