k8sManifests/nginxIngress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: tayeblagha.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myapp-service
            port:
              number: 80
      - path: /app2
        pathType: Prefix
        backend:
          service:
            name: app2     #Specify Service Name 
            port:
              number: 8080
      - path: /app3
        pathType: Exact
        backend:
          service:
            name: app3
            port:
              number: 8080
